<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.ul.miage.dsw</groupId>
	<artifactId>projet-gl</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<junit.version>5.6.2</junit.version>
		
		<project.bindist.dir>${project.basedir}/bindist</project.bindist.dir>
		<project.main.classname>${project.groupId}.${project.artifactId}.App</project.main.classname>
		<project.bin.appname>run</project.bin.appname>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongodb-driver-sync</artifactId>
			<version>4.2.2</version>
		</dependency>


		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>

				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>


			<plugin>
				<!-- create bat scripts for apps -->
				<!-- mvn package | appassembler:assemble -->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.10</version>
				<executions>
					<execution>
						<id>win</id>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
						<configuration>
							<assembleDirectory>${project.bindist.dir}</assembleDirectory>
							<repositoryLayout>flat</repositoryLayout>
							<extraJvmArguments>--module-path %JAVAFX_HOME%/lib --add-modules
								javafx.controls,javafx.fxml</extraJvmArguments>
							<programs>
								<program>
									<platforms>
										<platform>windows</platform>
									</platforms>
									<mainClass>${project.main.classname}</mainClass>
									<id>${project.bin.appname}</id>
								</program>
							</programs>
						</configuration>
					</execution>
					<execution>
						<id>unix</id>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
						<configuration>
							<assembleDirectory>${project.bindist.dir}</assembleDirectory>
							<repositoryLayout>flat</repositoryLayout>
							<extraJvmArguments>--module-path $JAVAFX_HOME/lib --add-modules
								javafx.controls,javafx.fxml</extraJvmArguments>
							<programs>
								<program>
									<platforms>
										<platform>unix</platform>
									</platforms>
									<mainClass>${project.main.classname}</mainClass>
									<id>${project.bin.appname}</id>
								</program>
							</programs>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Plugin qui crée l'archive zip contenant la distribution source dans 
				le dossier target -->
			<!-- NB : ce plugin utilise un fichier annexe : zip.xml -->
			<!-- ===================================================================================== -->
			<plugin>
				<!-- create a distribution archive -->
				<!-- mvn install ou assembly:single -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>make-zip</id>
						<phase>install</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptors>
								<descriptor>zip.xml</descriptor>
							</descriptors>
							<appendAssemblyId>true</appendAssemblyId>
						</configuration>
					</execution>
				</executions>
			</plugin>


		</plugins>
	</build>
</project>